--- a/app/main.css
+++ b/app/main.css
@@ -1,39 +1,28 @@
-body {
-    font-family: 'Microsoft YaHei';
-    margin: 0;
-}
-#hello {
+#leftMenu {
+    width: 110px;
+    float: left;
     text-align: center;
-    color: #00BCD4;
-    background: #ECF0F1;
-    border-bottom: 3px solid #CECECE;
-    padding: 10px 0;
+    padding: 20px 0;
+    height: 100%;
+    background: #95A5A6;
 }
-#timer {
-    text-align: right;
-    padding-right: 40px;
+#leftMenu a {
+    display: block;
+    text-decoration: none;
+    font-weight: bold;
+    color: #ddd;
+    height: 60px;
+    line-height: 60px;
+    background: #7F8C8D;
 }
-#todo {
-    background: #ECF0F1;
-    margin-top: 22px;
-    padding-left: 40px;
-    padding-bottom: 10px;
+#leftMenu a:hover {
+    color: #fff;
+    background: #34495E;
 }
-#output {
-    text-align: center;
-    margin-left: -20px;
-}
-#output label {
-    margin: 0 10px;
-}
-#date {
-    background: #ECF0F1;
-    margin-top: 22px;
-    padding-left: 40px;
-    padding-bottom: -3px;
-}
-#date input {
-    font-size: 20px !important;
-    font-weight: bold !important;
-    color: #888 !important;
+#rightWrap {
+    width: -webkit-calc(100% - 150px);
+    width: calc(100%-110px);
+    float: left;
+    padding: 20px 0;
+    margin-left: 20px;
 }
