--- a/app/profile/profile.css
+++ b/app/profile/profile.css
@@ -4,7 +4,7 @@ body {
 }
 #hello {
     text-align: center;
-    color: #00BCD4;
+    color: #2DB7F5;
     background: #ECF0F1;
     border-bottom: 3px solid #CECECE;
     padding: 10px 0;
@@ -13,28 +13,27 @@ body {
 #timer {
     text-align: right;
     padding-right: 40px;
+    margin-top: 20px;
+    font-size: 18px;
 }
 #todo {
     background: #ECF0F1;
-    margin-top: 22px;
-    padding-left: 40px;
-    padding-bottom: 10px;
+    margin-top: 20px;
+    padding: 10px 0 10px 40px;
+}
+#todo label{
+    font-size: 16px;
+}
+#todo ol {
+    list-style: decimal;
+    padding-left: 35px;
+    font-size: 16px;
+    line-height: 30px;
 }
 #output {
-    text-align: center;
-    margin-left: -20px;
+    margin: 40px 0;
+    padding-left: 40px;
 }
 #output label {
-    margin: 0 10px;
-}
-#date {
-    background: #ECF0F1;
-    margin-top: 22px;
-    padding-left: 40px;
-    padding-bottom: -3px;
-}
-#date input {
-    font-size: 20px !important;
-    font-weight: bold !important;
-    color: #888 !important;
+    font-size: 16px;
 }
