--- a/app/profile/profile.css
+++ b/app/profile/profile.css
@@ -31,7 +31,7 @@ body {
     line-height: 30px;
 }
 #output {
-    margin: 40px 0;
+    margin: 40px 0 0;
     padding-left: 40px;
 }
 #output label {
