--- a/app/profile/profile.css
+++ b/app/profile/profile.css
@@ -5,7 +5,7 @@ body {
 #hello {
     text-align: center;
     color: #2DB7F5;
-    background: #ECF0F1;
+    background: #F7F7F7;
     border-bottom: 3px solid #CECECE;
     padding: 10px 0;
     margin-top: 0;
@@ -17,7 +17,7 @@ body {
     font-size: 18px;
 }
 #todo {
-    background: #ECF0F1;
+    background: #F7F7F7;
     margin-top: 20px;
     padding: 10px 0 10px 40px;
 }
