实现嵌套视图的控制，添加穿梭框

--- a/app/main.css
+++ b/app/main.css
@@ -1,10 +1,12 @@
+/* 左侧导航固定宽度 */
 #leftMenu {
     width: 100px;
-    float: left;
-    text-align: center;
     padding: 0;
-    height: 100%;
     background: #222;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
 }
 #logo {
     display: block;
@@ -13,6 +15,7 @@
 #leftMenu a.navItem {
     display: block;
     text-decoration: none;
+    text-align: center;
     font-weight: bold;
     color: #fff;
     height: 60px;
@@ -26,6 +29,8 @@
     color: #fff;
     background: #3498DB;
 }
+
+/* 右侧宽度自适应 */
 #rightWrap {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
