升级到彩色欢迎标题

--- a/app/antdes/antdes.css
+++ b/app/antdes/antdes.css
@@ -5,7 +5,7 @@
     background: #F7F7F7;
 }
 table tr span i {
-    color: #F0656F;    
+    color: #2ECC71;    
 }
 table tr span i:hover {
     cursor: pointer;
