--- a/app/antdes/antdes.css
+++ b/app/antdes/antdes.css
@@ -13,3 +13,6 @@ table tr span i:hover {
 #nest span {
     font-size: 16px;
 }
+.ant-select-selection__placeholder {
+    line-height: 26px !important;
+}
