--- a/app/antdes/antdes.css
+++ b/app/antdes/antdes.css
@@ -2,7 +2,7 @@
     margin-bottom: 25px;
     padding: 15px 0;
     padding-left: 20px;
-    background: #F7F7F7;
+    background: #ECECEC;
 }
 table tr span i {
     color: #2ECC71;    
