--- a/app/main.css
+++ b/app/main.css
@@ -52,5 +52,11 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;    
     padding: 20px 20px 0 20px;
-    margin-left: 100px;
+    position: absolute;
+    top: 0;
+    left: 100px;
+    right: 0;
+    bottom: 0;
+    overflow-y: auto;
+
 }
